--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="contenedor">
                 <img src="./img/image-qr-code.png" alt="codigo qr" width="250px" height="250px">
                 <p class="titulo">Improve your front-end <br> skills by building projects</p>
-                <p class="contenido">scan the QR code to visit Frontend <br>Mentor and take coding skills to <br> the next level</p>
+                <p class="contenido"><span>scan the QR code to visit Frontend </span> <br>Mentor and take coding skills to <br> the next level</p>
             </div>
 
         </div>
